# pytgvoip

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  FindOpus.cmake  FindTGVoIP.cmake  MANIFEST.in  Makefile.am.arm.patch  NOTICE  README.libtgvoip.md  README.md  _tgvoip.cpp  _tgvoip.h  _tgvoip_module.cpp  appveyor.yml  example.py  pyproject.toml  setup.py
ci_scripts/: 00-init.bat  01-openssl.bat  02-opus.bat  03-build.bat  Dockerfile  build.sh
docs/: conf.py  index.rst  libtgvoip.md
docs/_static/css/: my_theme.css
docs/guides/: install.rst  libtgvoip.rst  usage.rst
docs/module/: tgvoip.rst  utils.rst
example/: README.md  alsa.py  make_call.py  outgoing_call_playback_and_record.py  receive_call.py
examples/: make_call.py  prank.py  pyrogram_wrapper.py  receive_calls.py  utils.py
python_wrapper/: _tgvoip.pyi  _utils.py  tgvoip.py
src/: FindTGVoIP.cmake  _tgvoip.cpp  _tgvoip.h  _tgvoip.pyi  _tgvoip_module.cpp  libtgvoip.cmake
src/tgvoip/: __init__.py  _utils.py  base_call.py  call.py  file_stream_call.py  incoming_call.py  outgoing_call.py  pyrogram.py  service.py  tgvoip.py  utils.py
